# COS280

./: .gitignore  README.md  Test 1 Study Guide.docx
backwards_chaining/: backChain.lisp
battleships/: AIContest.cpp  AIContest.h  AIPlayer.cpp  AIPlayer.h  AITester.h  CMakeLists.txt  LearningGambler2.h  Makefile  binaries.tar  contest.cpp  defines.h
genetic/: genetic.py
neural_network/: neural_network.py
tic-tac/: program.lisp
